static/css/base.css
html {
    height: 100%;

  }

body {
  background: linear-gradient(
    rgba(0, 0, 0, 0.5),
    rgba(0, 0, 0, 0.7)
  ),url('/media/home_background.jpg') no-repeat center
  center fixed;
  background-size: cover;
  height: calc(100vh - 10.25rem);
  color:rgb(109, 109, 109);
  font-family: 'Roboto', sans-serif;
  scroll-behavior: smooth;
}

.container-fluid {
  padding-right: 0.9375rem;
  padding-left: 0.9375rem;
  margin-right: auto;
  margin-left: auto;
}

/*-------------------------- Landing page Styling--*/

.hero-landing {
  background: grey;
}

.about-section {
  background: #fff;
  height:100vh;

}

/*-------------------------- Navbar Styling--*/

.nav-main {
  background: #fff;
  padding-top: 1.25rem;
  padding-bottom:1.25rem;
  z-index: 99;
  box-shadow: 0px 3px 5px rgba(0, 0, 0, .2);
  display:flex;
  align-items: center;
  justify-content: center;
  transition: 0.5s all ease-in-out;
}

.transition {
  display: inline-block!important;
  transition: 0.5s all ease-in-out;
  transform: translateX(0%)!important;
}

.nav-background {
  position:fixed;
  top:0;
  bottom:0;
  left:0;
  right: 0;
  width: 100%;
  height:100%;
  background: #000;
  opacity: 0;
  transition: 0.5s all ease-in-out;
}

.overlay-nav {
  opacity: 0.8;
  visibility: visible;
  z-index: 99;
  transform: translateX(0%)!important;
}

.nav-main-inner{
  margin-left: auto;
}

.nav-main-list-container{
  display:flex;
}

.nav-main-list-items{
  list-style:none;
  padding-right:1rem;
  
}

.navbar-expand-lg .navbar-nav .dropdown-menu {
  left: -5.25rem;
}

.mobile-nav {
  background: grey;
  position:fixed;
  top: 0;
  left: 0;
  z-index: 999;
  width: 85%;
  max-width: 20rem;
  height:100%;
  transition: 0.5s all ease-in-out;
  transform: translateX(-175%);
}
.mobile-nav-search {
  padding: 1.3rem;
  height: 80px;
}

.mobile-nav-form {
  position: absolute;
  top: 20px;
}

.mobile-nav-links {
  list-style: none;
  padding:0;
}

.mobile-nav-img {
  padding-top:10%;
  max-width: 60%;
}

.mobile-nav-link-items{
  padding: 20px;
  border-bottom: 1px solid rgba(255, 255,255, 0.4);
}

.icon-header-list-items {
  padding-left:0;
  align-items: center;
}

.list-inline-item {
  padding: 0 6px;
}

.navbar-search-focus {
  top: -28px!important;
  left: -8.0625rem!important;
  padding: 0!important;
}

.list-inline-item.icon-nav-spacer.dropdown.show {
  margin-left: 6.25rem!important;
}

.inline-search-icon{
  position: absolute;
  left:4px;
}

.inline-form-icon {
  position: relative;
  padding-left: 1.25rem;
}

a:hover {
  text-decoration: none!important;
}

a i:hover,
li .text-white:hover {
  color: orangered!important;
}
.nav-main-list-items a:hover,
.dropdown-menu a:hover {
  color: orangered!important;
  transition: all 0.3s ease
}

.a dropdown-item:active {
  background: #fff;
  color: orangered;
}

/*-------------------------- Text Styling--*/

.logo-font {
  text-transform: uppercase;
}

.title-logo {
  width: 15%;
  margin: auto;
  display: inline-block;
  padding: 1.25rem 0.625rem;
}

.title-text {
  width: 30%;
  margin: auto;
  display: inline-block;
  padding: 1.25rem 0.625rem;
}
.text-black {
  color: #000000 !important;
}

.text-white {
  color: #fff !important;
}

.nav-link {
  max-width: 14.375rem;
}

.text-uc {
  text-transform: uppercase;
}

.text-heading-size {
  font-size: 1.75rem;
}

.cart-grandtotal {
  font-size: 1.3rem;
  padding-bottom:0.625rem;
}

.product_counter {
  height: 1.25rem;
  width: 1.25rem;
  top: 2.5rem;
  font-size: 0.857142857rem;
  right: 16px;
  border-radius: 50%;
  font-weight: 400;
  position: absolute;
  z-index: 1;
  color: #fff;
  background: orangered;
}

.product_counter-mobile {
  position: relative;
  z-index: 1;
  color: #fff;
  background: orangered;
  height:1.25rem;
  width:1.25rem;
  font-size: 0.857142857rem;
  border-radius: 50%;
  left: 0.625rem;
  top: -0.9375rem;
}

.classes-text:hover {
  color:orangered!important;
}

/*-------------------------- Footer Styling--*/

.footer-container {
  background: #fafafa;;
  padding:1.25rem;
  box-shadow: 1px 0px 2px rgba(0,0,0,0.4);
}

.footer-logo {
  max-width: 200px;
  max-height: 200px;
}

.footer-nav-ul {
  list-style: none;
  padding-left: 0;
}

.footer-nav-li a{
  color:black;
}

.footer-nav-li a:hover{
  color:orangered;
}
/*-------------------------- Products Styling--*/

.products-border {
  background: #212529;
  color: #ffffff;
  border: 0;
}

.product-text, 
.product-text:link{
  text-decoration: none!important;
  color: #ffffff!important;
  font-size: 1rem!important;
  padding-top:20px;
}
.product-text:hover {
  text-decoration: none!important;
  color:orangered!important;
}

/* added to remove the hover link underline on products page*/
a.products-border:hover{
  text-decoration: none;
}

.image-wrapper-products {
  background: linear-gradient(180deg, rgba(255,255,255,1) 24%, rgba(33,37,41,1) 75%, rgba(33,37,41,1) 100%);
}

.product_header {
  display:block;
  font-size: 1.3rem;
  padding-bottom: 5px;
}

#quantity-control{
  width: 6.875rem;
}

.review-card {
  background:#fafafa;
  width:18.75rem;
  height: 12.5rem;
  margin-bottom: 0.625rem;
  box-shadow: 1px 1px 2px rgba(0,0,0,0.4);
}

.review-card-header {
  padding-top: 1.25rem;
}

.review-card i {
  color: #fff;
  font-size: 1.875rem;
  background: orangered;
  padding: 0.5625rem;
  height: 3.125rem;
  width: 3.125rem;
  border-radius: 50%;
  margin-left:4px

}
/*-------------------------- Checkout Page Styling--*/

.checkout_row {
  padding: 0.625rem;
  border-radius:5px;
  margin-bottom: 0.625rem;
  box-shadow: 1px 1px 2px rgba(0,0,0,0.4);
  background: #fafafa;
}

.form-details-checkout {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.center-custom {
  display: flex;
  align-items: center;
  justify-content: center;
}

.image-responsive {
  display: block;
  max-width: 100%;
  margin: auto;
}

.image-box-shadow {
  box-shadow: 1px 1px 2px rgba(0,0,0,0.4);
}

.order-panel {
  padding: 1.25rem;  
  margin-bottom: 1.25rem;
}

.order-line-items {
  margin-bottom: 1.25rem;
}

.StripeElement,
.stripe-style-input {
  box-sizing: border-box;
  height: 2.5rem;
  padding: 0.625rem 0.75rem;
  border: 1px solid transparent;
  border-radius: 0px;
  background-color: white;
  box-shadow: 0 1px 3px 0 #e6ebf1;
  -webkit-transition: box-shadow 150ms ease;
  transition: box-shadow 150ms ease;
}

.StripeElement--focus,
.stripe-style-input:focus,
.stripe-style-input:active {
  box-shadow: 0 1px 3px 0 #cfd7df;
}

.StripeElement--webkit-autofill {
  background-color: #fefde5 !important;
}

.stripe-style-input::placeholder {
    color: #aab7c4;
}

.fieldset-label {
    position: relative;
    right: .5rem;
}

#payment-form .form-control,
#card-element {
    color: #000;
    border: 1px solid #00000052;
    border-radius: 4px;
    font-size: 1rem;
}


/*-------------------------- Reusable overlays hr rules and to top button Styling--*/
.overlay {
  height:100%;
  width: 100%;
  top:0;
  left:0;
  position: fixed;
  background:black;
  z-index: -1;
}

.white-overlay {
  height:100%;
  width: 100%;
  top:0;
  left:0;
  position: fixed;
  background:#fff;
  z-index: -1;
}

.hr-white {
  border: 0;
  height: 1px;
  background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(255, 255, 255, 0.75), rgba(0, 0, 0, 0));
}

.hr-black {
  border: 0;
  height: 1px;
  background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
}

.hr-black-long {
  border: 0;
  height: 1px;
  background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
}

.totop-button {
  height:2.1875rem;
  width:2.1875rem;
  position:fixed;
  bottom:0.625rem;
  right: 0.625rem;
  background: orangered;
}

.totop-link {
  cursor: pointer;
}

.card-shadow {
  box-shadow: 0px 3px 5px rgba(0, 0, 0, .2);
}

.overlay-delete {
  position:fixed;
  top:0;
  bottom:0;
  left:0;
  right: 0;
  width: 100%;
  height:100%;
  background: #000;
  opacity: 0;
  transition: 0.5s all ease-in-out;
}

.overlay-show {
  opacity: 0.8;
  visibility: visible;
  z-index: 999999;
}

.popup {
  background:#fff;
  display: none;
  color: orangered;
  position: fixed;
  z-index: 99999999;
  top:30%;
  left: 37%;
  padding: 1.2rem;
  transition: 0.5s all ease-in-out;
}


/*-------------------------- Button Styling--*/

.white-btn {
  background:#fff;
  color:#000;
  border: 1px solid black;
}
.orange-btn {
  background: orangered!important;
}

.dark-btn {
  background: #212529!important;
  color: #ffffff!important;
}

.button-styling {
  display: inline-block;
  font-weight: 400;
  text-align: center;
  vertical-align: middle;
  cursor: pointer;
  padding: .375rem .75rem;
  font-size: 1rem;
  line-height: 1.5;
}

.cart-colour {
  color:orangered!important;
}

.btn-outline {
  border: 1px solid black;
}

.btn-outline:hover {
  background: orangered;
  color: white;
  border: transparent;
  height:2.3125rem;
  width: 12.279375rem;
}

.button-box{
  display: flex;
  align-items: center;
  flex-direction: column-reverse;
}

/*-------------------------- Profile Styling--*/

.allauth-mt {
  margin-top: 10.25rem;
}
.profile-nav {
  position: sticky;
  top: 6.25rem;
}
.profile-navigation-list{
  background: #fafafafa;
  border-radius: 0.375rem;
  padding: 0.75rem;
}

.word-wrapper{
  word-break: break-word;
}

.small-font-sizing {
  font-size: 0.8rem;
}

.profile-navigation-list li:active,
.profile-navigation-list li:hover,
.profile-navigation-list li:focus,
.profile-active.active {
  background: orangered;
  color:#fff!important;
  border-color: transparent!important;
}

.profile-dashboard {
  padding: 1.4rem;
  background: #fafafa;
  border-radius: 0.375rem;
}

.profile-dashboard-orders {
  display: none;
  padding: 1.4rem;
  border-radius: 0.375rem;
  margin-bottom: 1.25rem;
}

#account-profile-logout-panel {
  display: none;
}

.form-styling {
  color: #000;
  border: 1px solid #00000052;
  border-radius: 4px;
  font-size: 1rem;
}

.form-styling:focus {
  border-color:orangered
}

/*-------------------------- Toast Styling--*/

.message-container {
  position: fixed;
  top: 5.125rem;
  right: 0.9375rem;
  z-index: 9999;
}

.toast-line {
  height:3px;
}

.toast-styling {
  overflow: visible;
}

/*-------------------------- Allauth styling --*/

.allauth-form-inner-content p {
  margin-top: 1.5rem;

}

/*-------------------------- Spinner styling --*/

#loading-spinner:before {
  content: "";
  box-sizing: border-box;
  position: absolute;
  top: 50%;
  left: 50%;
  width: 3.75rem;
  height: 3.75rem;
  margin-top: -1.875rem;
  margin-left: -1.875rem;
  border-radius: 50%;
  border-top: 2px solid orangered;
  border-right: 2px solid transparent;
  animation: spinner 0.7s linear infinite;
  z-index:9999;
}

#spinner-overlay {
  display:none;
  background: #000;
  position:fixed;
  top:0;
  left:0;
  width: 100%;
  height: 100%;
  z-index: 9999;
  opacity: 0.8;
  visibility: visible;
}

/*-------------------------- Keyframes for transitions --*/

@keyframes spinner {
  to {
    transform: rotate(360deg);
  }
}


/*-------------------------- Media Queries--*/

@media (min-width: 75rem) {
  .container{
    max-width: 80%;
  }
}

@media (min-width: 62rem) {
  .header-container {
    padding-top: 10.25rem;
  }
}

@media (max-width: 61.9375rem) {
  .header-container {
    padding-top: 7.3125rem;
  }

  body {
    height: calc(100vh - 7.25rem);
  }
}
@media (max-width:48rem){
  .popup {
    top:30%;
    left: 25%;
    padding: 1.2rem;
    max-width:18.75rem;
  }
}

@media (max-width:23.75rem){
  .nav-link {
    padding:0!important;
  }
  .popup {
    top:30%;
    left: 5%;
    padding: 1.2rem;
    max-width:18.75rem;
  }
}

@media (min-width: 17.5rem){
  .hr-white {
    width: 15.625rem;
  }
  .hr-black {
    width: 15.625rem;
  }
}

